# trading-rag-mentor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TUTORIAL.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
data/transcripts/: minervini-notes11.txt  minervini-notes13.txt  summary.txt
data/transcripts/momentum-trading/: minervini-notes-11.txt  minervini-notes-12.txt  minervini-notes-14.txt  minervini-notes-15.txt  minervini-notes-21.txt  minervini-notes-22.txt  minervini-notes-23.txt  minervini-notes-24.txt  minervini-notes-31.txt  minervini-notes-32.txt  minervini-notes-33.txt  minervini-notes-34.txt  minervini-notes-41.txt  minervini-notes-42.txt  minervini-notes-43.txt  minervini-notes-44.txt  minervini-notes-51.txt  minervini-notes-52.txt  minervini-notes-53.txt
data/transcripts/price-action/1. Buyers and Sellers/: 1. Buyers summary.txt  1. Buyers.txt  1. Sellers.txt  2. Buyers - Example 1.txt  2. Sellers - Example 1.txt  2. Sellers Summary.txt  3. Buyers - Example 2.txt  3. Sellers - Example 2.txt  4. Buyers - Example 3.txt  4. Sellers - Example 3.txt
data/transcripts/price-action/2 Gauging Momentum/: 1. Gauging Momentum.txt  2. Gauging Momentum - Sell Example 1.txt  (+4 more)
docs/: chunking_strategy.md  evaluation_framework.md  retrieval_strategy.md
scripts/: evaluate_rag.py  evaluation_results.json  ragas_eval.py  ragas_results.json
src/: app.py  build_index.py  chat_history.py  config.py  prompts.py  retrieval.py
tests/: golden_qa.json  test_rag_evaluation.py  test_rag_pipeline.py
(+32 files in other folders)
