[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-rag-mentor"
version = "0.1.0"
description = "My Personal Trading RAG Coach"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]
